--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>B10A1-Challenge-Begins</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="azeret-mono">
     <header>
-         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi earum deleniti eligendi tempora qui, officia soluta fuga reprehenderit sint maiores debitis exercitationem quaerat excepturi quibusdam odio laboriosam doloribus numquam minus.</h1>
+        <nav>
+            <h2 class="nav-title">Awlad.H</h2>
+            <div>
+                <button class="btn-primary">Download Resume</button>
+            </div>
+        </nav>
     </header>
     <main>
 
