added the banner section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 </head>
 <body class="azeret-mono">
     <header>
+        <!-- nav section -->
         <nav>
             <h2 class="nav-title">Awlad.H</h2>
             <div>
                 <button class="btn-primary">Download Resume</button>
             </div>
         </nav>
+        <!-- Banner section -->
+         <div class="banner">
+            <div class="banner-content">
+                <img src="assets/Group.png" alt="developer images">
+                <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
+                <p class="common-description">I'm so happy to share that I've created my very first website using HTML and CSS! This is a big step for me on my path to becoming a developer. After lots of learning and practice, I finally made a website that works well and looks great.</p>
+                <button id="banner-btn" class="btn-primary">Contact with me</button>
+            </div>
+         </div>
     </header>
     <main>
 
