added why web development section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
          </div>
     </header>
     <main>
-
+       <!-- Development Sectioin -->
+        <section class="development-section">
+            <div class="development-content">
+                <h2 class="common-title">Why Web Development</h2>
+                <p class="common-description">Web Developer career guide is intended to help you take the first steps toward a lucrative career in web development. Learn more about what the web development field covers.</p>
+            </div>
+        </section>
     </main>
     <footer>
 
