added development section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,41 @@
                 <h2 class="common-title">Why Web Development</h2>
                 <p class="common-description">Web Developer career guide is intended to help you take the first steps toward a lucrative career in web development. Learn more about what the web development field covers.</p>
             </div>
+            <div class="dev-hero-container">
+                <!-- dev card -1 -->
+                <div class="dev-hero-card">
+                    <div class="card-content">
+                      <h3 class="card-title">I will Do Coding and Change The World</h3>
+                      <p class="common-description">Code can be incredibly intimidating. It’s something you can only become good at it after hours and hours of practice. Coding is a journey that never ends.</p>
+                      <button class="btn-primary">Learn More</button>
+                    </div>
+                    <div class="card-img">
+                        <img src="assets/Layer_1.png">
+                    </div>
+                </div>
+                <!-- dev card -2 -->
+                <div class="dev-hero-card">
+                    <div class="card-img">
+                        <img src="assets/Group 3.png">
+                    </div>
+                    <div class="card-content">
+                      <h3 class="card-title">I will help People by creating Modern Web System</h3>
+                      <p class="common-description">Your enterprise is built through web-based application programming interfaces (APIs), allowing RESTful calls between different parts of your application and its services.</p>
+                      <button class="btn-primary">Learn More</button>
+                    </div>
+                </div>
+                <!-- dev card -3 -->
+                <div class="dev-hero-card">
+                    <div class="card-content">
+                      <h3 class="card-title">I will Do Coding and Change The World</h3>
+                      <p class="common-description">Coding is a journey that never ends.Your enterprise is built through web-based application programming interfaces (APIs), allowing RESTful calls between different parts of your application and its services.</p>
+                      <button class="btn-primary">Learn More</button>
+                    </div>
+                    <div class="card-img">
+                        <img src="assets/Group 4.png">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
