added the inspiration section youtube video

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
                 </div>
             </div>
         </section>
+        <!-- Inspiration section -->
+         <section class="inspiration-section">
+            <div class="inspiration-content">
+                <h2 class="common-title">My Inspiration</h2>
+                <p class="common-description">With pride in our work comes dignity, with dignity we can build trust and with trust we can gain respect and with respect the freedom we need to continue to develop what it is at work that inspires us.</p>
+            </div>
+            <!-- inspiration video -->
+             <div class="inspiration-video">
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=fFEtw-TMr4Vqpybk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+             </div>
+         </section>
     </main>
     <footer>
 
