added current target style sectioin

--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
                 <iframe width="1076" height="550" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=fFEtw-TMr4Vqpybk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
              </div>
          </section>
+         <!-- target section -->
+          <section class="target-section">
+             <div class="target-content">
+                <h2 class="common-title">My Current Target</h2>
+                <p class="common-description">Congratulations on learning HTML, CSS, and JavaScript! Here’s a step-by-step guide to help you start building websites:</p>
+             </div>
+             <!-- target card container -->
+              <div class="target-card-container">
+                <div id="html-card" class="target-card">
+                    <img src="assets/html.png">
+                    <h4>HTML</h4>
+                    <p>html meaning is Heyper Text Markup Language</p>
+                    <a href=""><span></span>Learn More</a>
+                </div>
+                <div id="css-card" class="target-card">
+                    <img src="assets/css.png">
+                    <h4>CSS</h4>
+                    <p>The full form of CSS is Cascading Style Sheets.</p>
+                    <a href=""><span></span>Learn More</a>
+                </div>
+                <div id="js-card" class="target-card">
+                    <img src="assets/js.png">
+                    <h4>JavaScript</h4>
+                    <p>JavaScript is a scripting or programming language </p>
+                    <a href=""><span></span>Learn More</a>
+                </div>
+              </div>
+          </section>
     </main>
     <footer>
 
