--- a/index.html
+++ b/index.html
@@ -109,7 +109,14 @@
           </section>
     </main>
     <footer>
-
+      <div class="footer-title">
+        <h2>An Open Commitment by Awlad Hossain</h2>
+      </div>
+      <div class="footer-icons">
+        <a href="https://web.facebook.com/ma.joynul"><img src="assets/facebook.png"></a>
+        <a href="https://github.com/joynul24"><img src="assets/github.png"></a>
+        <a href="https://www.linkedin.com/login"><img src="assets/linkedin-icon 1.png"></a>
+      </div>
     </footer>
 </body>
 </html>
