added inspiration video border

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                 </div>
               </div>
           </section>
+          <!-- need support section -->
+           <section class="support-section">
+                
+           </section>
     </main>
     <footer>
       <div class="footer-title">
