added I need support section

--- a/index.html
+++ b/index.html
@@ -108,8 +108,17 @@
               </div>
           </section>
           <!-- need support section -->
-           <section class="support-section">
-                
+           <section class="submit-section">
+                <div class="submit-container">
+                    <div class="submit-content">
+                        <h3 id="submit-title">I need Support</h3>
+                        <p class="common-description">Our battle-tested developers specialize in a wide range of web development services. Here are some of the solutions that we can deliver for you.</p>
+                    </div>
+                    <div class="submit-input">
+                        <input type="text" placeholder="Suggest me any feedback for me">
+                        <button id="submit-btn" class="btn-primary">Submit</button>
+                    </div>
+                </div>
            </section>
     </main>
     <footer>
