added next target title and description section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
                 </div>
               </div>
           </section>
+          <!-- next target section -->
+           <section class="next-target">
+              <div class="next-target-banner">
+                <h2 class="common-title">My Next Target</h2>
+                <p class="common-description">So you've learned HTML, CSS, and Javascript - great, now you need to take the code you've written and put it in a browser.</p>
+              </div>
+           </section>
           <!-- need support section -->
            <section class="submit-section">
                 <div class="submit-container">
