added challenging part btn to submit section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="assets/Group.png" alt="developer images">
                 <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="common-description">I'm so happy to share that I've created my very first website using HTML and CSS! This is a big step for me on my path to becoming a developer. After lots of learning and practice, I finally made a website that works well and looks great.</p>
-                <button id="banner-btn" class="btn-primary">Contact with me</button>
+                <a href="#contact-section"><button id="banner-btn" class="btn-primary">Contact with me</button></a>
             </div>
          </div>
     </header>
@@ -113,9 +113,12 @@
                 <h2 class="common-title">My Next Target</h2>
                 <p class="common-description">So you've learned HTML, CSS, and Javascript - great, now you need to take the code you've written and put it in a browser.</p>
               </div>
+              <div class="next-target-card-containr">
+                 
+              </div>
            </section>
           <!-- need support section -->
-           <section class="submit-section">
+           <section id="contact-section" class="submit-section">
                 <div class="submit-container">
                     <div class="submit-content">
                         <h3 id="submit-title">I need Support</h3>
