added next target one card

--- a/index.html
+++ b/index.html
@@ -113,8 +113,15 @@
                 <h2 class="common-title">My Next Target</h2>
                 <p class="common-description">So you've learned HTML, CSS, and Javascript - great, now you need to take the code you've written and put it in a browser.</p>
               </div>
-              <div class="next-target-card-containr">
-                 
+              <div class="next-target-card-container">
+                <div class="next-target-card">
+                    <img src="assets/react.png">
+                    <div>
+                        <h4 class="next-target-title">React JS</h4>
+                        <p class="common-description">React.js is an open-source JavaScript library, crafted with precision by Facebook, that aims to simplify the intricate process of building interactive user interfaces.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
               </div>
            </section>
           <!-- need support section -->
