My project is almost finished

--- a/index.html
+++ b/index.html
@@ -114,11 +114,30 @@
                 <p class="common-description">So you've learned HTML, CSS, and Javascript - great, now you need to take the code you've written and put it in a browser.</p>
               </div>
               <div class="next-target-card-container">
+                <!-- card 1 -->
                 <div class="next-target-card">
                     <img src="assets/react.png">
                     <div>
                         <h4 class="next-target-title">React JS</h4>
                         <p class="common-description">React.js is an open-source JavaScript library, crafted with precision by Facebook, that aims to simplify the intricate process of building interactive user interfaces.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="next-target-card">
+                    <img src="assets/nodejs.png">
+                    <div>
+                        <h4 class="next-target-title">Node JS</h4>
+                        <p class="common-description">Node.js is an open-source, cross-platform runtime environment that lets you run JavaScript on the server side. This software’s architecture enables efficient data transfers.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="next-target-card">
+                    <img src="assets/mongodb.png">
+                    <div>
+                        <h4 class="next-target-title">MongoDB</h4>
+                        <p class="common-description">MongoDB is a document database with the scalability and flexibility that you want with the querying and indexing that you need</p>
                         <a href="">Learn More</a>
                     </div>
                 </div>
